--- a/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
+++ b/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
@@ -162,6 +162,11 @@
                         <div><strong>Block List Report</strong> </div>
                         <div class="tooltip">BLOCK LISY REPORT</div>
                     </div>
+                    <div class="card royal-card tooltip-container" (click)="openHistoryDialog(14)"><i
+                        class="fas fa-window-close"></i>
+                    <div><strong>Combo Package Update History</strong> </div>
+                    <div class="tooltip">COMBO PACKAGE </div>
+                </div>
                 </div>
             </mat-expansion-panel>
         </mat-accordion>
