--- a/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
+++ b/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
@@ -19,8 +19,8 @@
                 <div *ngIf="!walletshare" class="card box d-flex flex-column justify-content-between p-3">
                     <div class="mt-2 mb-3 text-center text1">Current Balance</div>
                     <div class="d-flex justify-content-center align-item-center ">
-                        <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
-                        <h5>{{operatorBalance}} </h5>
+                        <!-- <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i> -->
+                        <!-- <h5>{{operatorBalance}} </h5> -->
                     </div>
                 </div>
             </div>
