--- a/src/app/admin/features/operator_Login/Dialog/lco-smartcard-dialog/lco-smartcard-dialog.component.html
+++ b/src/app/admin/features/operator_Login/Dialog/lco-smartcard-dialog/lco-smartcard-dialog.component.html
@@ -123,7 +123,7 @@
             </div>
         </div>
         <div class="d-flex justify-content-center align-items-center mx-1" style="padding: 10px;">
-            <button type="button" class="btn btn-success" (click)="submit()">Submit
+            <button type="button" class="btn btn-success" (click)="update()">Submit
             </button>
             &nbsp;
             <button type="button" class="btn btn-danger" (click)="onNoClick()">No</button>
