--- a/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
+++ b/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
@@ -254,11 +254,12 @@
                     <h5>{{operatorBalance}} </h5>
                 </div>
             </div>
-            <div *ngIf="!walletshare" class="card box d-flex flex-column justify-content-between p-3">
+            <div  class="card box d-flex flex-column justify-content-between p-3">
                 <div class="mt-2 mb-3 text-center text1">Current Balance</div>
                 <div class="d-flex justify-content-center align-item-center ">
-                    <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
-                    <h5>{{operatorBalance}} </h5>
+                    <i  *ngIf="wallet" class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
+                    <h5 *ngIf="wallet">{{operatorBalance}} </h5>
+                    <p *ngIf="!wallet" style="color: rgb(70, 70, 70);">{{'No Wallet available'}} </p>
                 </div>
             </div>
         </div>
@@ -405,8 +406,8 @@
                     <div class="mt-2 mb-2 text-center text">Today Recharge</div>
                 </div>
 
-                <div *ngIf=" rechargeHistory"
-                    class="card box d-flex flex-column justify-content-between p-3" (click)="openLCO_dashboard(4)">
+                <div *ngIf=" rechargeHistory" class="card box d-flex flex-column justify-content-between p-3"
+                    (click)="openLCO_dashboard(4)">
                     <div class="d-flex justify-content-between w-100">
                         <i class='bx bx-credit-card'></i>
                         <span class="fw-bold">
